The phone & HyphenOS text not showing on mobile might have just been fixed

--- a/media.css
+++ b/media.css
@@ -117,7 +117,9 @@
     }
 
     .main-wrapper {
-        margin-top: 0px;
+        position: absolute;
+        width: 100%;
+        margin-top: 12vh;
     }
 
     .presentation {
@@ -126,6 +128,7 @@
         align-items: auto;
         margin-left: 5%;
         position:relative;
+        padding-top: 30rem;
     }
 
     .left-content {
